# shrink-img

./: Cargo.toml  shrink_png.py  tool.py
.github/workflows/: CI.yml
src/: lib.rs
